--- a/src/.vuepress/styles/palette.scss
+++ b/src/.vuepress/styles/palette.scss
@@ -1,4 +1,5 @@
 // you can change colors here
 @import './rainbow.scss';
 
-$theme-color: #096dd9;
+$theme-colors: #2196f3, #f26d6d, #3eaf7c, #fb9b5f;
+
