Fix: home page background

--- a/src/.vuepress/styles/rainbow.scss
+++ b/src/.vuepress/styles/rainbow.scss
@@ -10,7 +10,7 @@
       --vp-c-brand-lighter: #78fadc;
       --vp-c-brand-dark: #008269;
       --vp-c-brand-darker: #005d47;
-      --vp-c-brand-next: #009ff7
+      --vp-c-brand-next: #009ff7;
   }
 
   1.25% {
@@ -19,7 +19,7 @@
       --vp-c-brand-lighter: #79fbe5;
       --vp-c-brand-dark: #008371;
       --vp-c-brand-darker: #005e4f;
-      --vp-c-brand-next: #009dfa
+      --vp-c-brand-next: #009dfa;
   }
 
   2.5% {
@@ -28,7 +28,7 @@
       --vp-c-brand-lighter: #7afbee;
       --vp-c-brand-dark: #00837a;
       --vp-c-brand-darker: #005e56;
-      --vp-c-brand-next: #009bfc
+      --vp-c-brand-next: #009bfc;
   }
 
   3.75% {
@@ -37,7 +37,7 @@
       --vp-c-brand-lighter: #7bfbf8;
       --vp-c-brand-dark: #008382;
       --vp-c-brand-darker: #005e5e;
-      --vp-c-brand-next: #0098fd
+      --vp-c-brand-next: #0098fd;
   }
 
   5% {
@@ -46,7 +46,7 @@
       --vp-c-brand-lighter: #7dfaff;
       --vp-c-brand-dark: #00838a;
       --vp-c-brand-darker: #005e65;
-      --vp-c-brand-next: #0096fd
+      --vp-c-brand-next: #0096fd;
   }
 
   6.25% {
@@ -55,7 +55,7 @@
       --vp-c-brand-lighter: #7efaff;
       --vp-c-brand-dark: #008391;
       --vp-c-brand-darker: #005e6d;
-      --vp-c-brand-next: #0093fd
+      --vp-c-brand-next: #0093fd;
   }
 
   7.5% {
@@ -64,7 +64,7 @@
       --vp-c-brand-lighter: #7ffaff;
       --vp-c-brand-dark: #008399;
       --vp-c-brand-darker: #005e74;
-      --vp-c-brand-next: #2e90fc
+      --vp-c-brand-next: #2e90fc;
   }
 
   8.75% {
@@ -73,7 +73,7 @@
       --vp-c-brand-lighter: #81f9ff;
       --vp-c-brand-dark: #0082a0;
       --vp-c-brand-darker: #005e7b;
-      --vp-c-brand-next: #4d8dfa
+      --vp-c-brand-next: #4d8dfa;
   }
 
   10% {
@@ -82,7 +82,7 @@
       --vp-c-brand-lighter: #82f8ff;
       --vp-c-brand-dark: #0082a7;
       --vp-c-brand-darker: #005e81;
-      --vp-c-brand-next: #638af8
+      --vp-c-brand-next: #638af8;
   }
 
   11.25% {
@@ -91,7 +91,7 @@
       --vp-c-brand-lighter: #84f8ff;
       --vp-c-brand-dark: #0081ae;
       --vp-c-brand-darker: #005d87;
-      --vp-c-brand-next: #7587f5
+      --vp-c-brand-next: #7587f5;
   }
 
   12.5% {
@@ -100,7 +100,7 @@
       --vp-c-brand-lighter: #85f7ff;
       --vp-c-brand-dark: #0081b4;
       --vp-c-brand-darker: #005d8d;
-      --vp-c-brand-next: #8583f1
+      --vp-c-brand-next: #8583f1;
   }
 
   13.75% {
@@ -109,7 +109,7 @@
       --vp-c-brand-lighter: #87f6ff;
       --vp-c-brand-dark: #0080b9;
       --vp-c-brand-darker: #005c93;
-      --vp-c-brand-next: #9280ed
+      --vp-c-brand-next: #9280ed;
   }
 
   15% {
@@ -118,7 +118,7 @@
       --vp-c-brand-lighter: #88f4ff;
       --vp-c-brand-dark: #007fbf;
       --vp-c-brand-darker: #005b98;
-      --vp-c-brand-next: #9f7ce9
+      --vp-c-brand-next: #9f7ce9;
   }
 
   16.25% {
@@ -127,7 +127,7 @@
       --vp-c-brand-lighter: #89f3ff;
       --vp-c-brand-dark: #007ec3;
       --vp-c-brand-darker: #005b9c;
-      --vp-c-brand-next: #aa78e3
+      --vp-c-brand-next: #aa78e3;
   }
 
   17.5% {
@@ -136,7 +136,7 @@
       --vp-c-brand-lighter: #8af1ff;
       --vp-c-brand-dark: #007dc8;
       --vp-c-brand-darker: #0059a0;
-      --vp-c-brand-next: #b574dd
+      --vp-c-brand-next: #b574dd;
   }
 
   18.75% {
@@ -145,7 +145,7 @@
       --vp-c-brand-lighter: #8bf0ff;
       --vp-c-brand-dark: #007bcb;
       --vp-c-brand-darker: #0058a3;
-      --vp-c-brand-next: #be71d7
+      --vp-c-brand-next: #be71d7;
   }
 
   20% {
@@ -154,7 +154,7 @@
       --vp-c-brand-lighter: #8ceeff;
       --vp-c-brand-dark: #007ace;
       --vp-c-brand-darker: #0057a6;
-      --vp-c-brand-next: #c76dd1
+      --vp-c-brand-next: #c76dd1;
   }
 
   21.25% {
@@ -163,7 +163,7 @@
       --vp-c-brand-lighter: #8decff;
       --vp-c-brand-dark: #0078d0;
       --vp-c-brand-darker: #0055a8;
-      --vp-c-brand-next: #cf69c9
+      --vp-c-brand-next: #cf69c9;
   }
 
   22.5% {
@@ -172,7 +172,7 @@
       --vp-c-brand-lighter: #8de9ff;
       --vp-c-brand-dark: #0076d2;
       --vp-c-brand-darker: #0053aa;
-      --vp-c-brand-next: #d566c2
+      --vp-c-brand-next: #d566c2;
   }
 
   23.75% {
@@ -181,7 +181,7 @@
       --vp-c-brand-lighter: #8ee7ff;
       --vp-c-brand-dark: #0074d3;
       --vp-c-brand-darker: #0051ab;
-      --vp-c-brand-next: #dc63ba
+      --vp-c-brand-next: #dc63ba;
   }
 
   25% {
@@ -190,7 +190,7 @@
       --vp-c-brand-lighter: #8ee4ff;
       --vp-c-brand-dark: #0071d4;
       --vp-c-brand-darker: #004fab;
-      --vp-c-brand-next: #e160b3
+      --vp-c-brand-next: #e160b3;
   }
 
   26.25% {
@@ -199,7 +199,7 @@
       --vp-c-brand-lighter: #8ee1ff;
       --vp-c-brand-dark: #006fd3;
       --vp-c-brand-darker: #004dab;
-      --vp-c-brand-next: #e65eab
+      --vp-c-brand-next: #e65eab;
   }
 
   27.5% {
@@ -208,7 +208,7 @@
       --vp-c-brand-lighter: #99deff;
       --vp-c-brand-dark: #006cd2;
       --vp-c-brand-darker: #004baa;
-      --vp-c-brand-next: #e95ca2
+      --vp-c-brand-next: #e95ca2;
   }
 
   28.75% {
@@ -217,7 +217,7 @@
       --vp-c-brand-lighter: #abdbff;
       --vp-c-brand-dark: #0069d1;
       --vp-c-brand-darker: #0048a9;
-      --vp-c-brand-next: #ed5a9a
+      --vp-c-brand-next: #ed5a9a;
   }
 
   30% {
@@ -226,7 +226,7 @@
       --vp-c-brand-lighter: #bbd7ff;
       --vp-c-brand-dark: #3066cf;
       --vp-c-brand-darker: #0045a7;
-      --vp-c-brand-next: #ef5992
+      --vp-c-brand-next: #ef5992;
   }
 
   31.25% {
@@ -235,7 +235,7 @@
       --vp-c-brand-lighter: #cad4ff;
       --vp-c-brand-dark: #4963cc;
       --vp-c-brand-darker: #0941a4;
-      --vp-c-brand-next: #f15989
+      --vp-c-brand-next: #f15989;
   }
 
   32.5% {
@@ -244,7 +244,7 @@
       --vp-c-brand-lighter: #d8d1ff;
       --vp-c-brand-dark: #5b5fc8;
       --vp-c-brand-darker: #2e3ea1;
-      --vp-c-brand-next: #f25981
+      --vp-c-brand-next: #f25981;
   }
 
   33.75% {
@@ -253,7 +253,7 @@
       --vp-c-brand-lighter: #e6cdff;
       --vp-c-brand-dark: #6a5cc4;
       --vp-c-brand-darker: #413a9d;
-      --vp-c-brand-next: #f25a79
+      --vp-c-brand-next: #f25a79;
   }
 
   35% {
@@ -262,7 +262,7 @@
       --vp-c-brand-lighter: #f2c9ff;
       --vp-c-brand-dark: #7758c0;
       --vp-c-brand-darker: #503598;
-      --vp-c-brand-next: #f25c71
+      --vp-c-brand-next: #f25c71;
   }
 
   36.25% {
@@ -271,7 +271,7 @@
       --vp-c-brand-lighter: #fec6ff;
       --vp-c-brand-dark: #8354bb;
       --vp-c-brand-darker: #5c3193;
-      --vp-c-brand-next: #f15e69
+      --vp-c-brand-next: #f15e69;
   }
 
   37.5% {
@@ -280,7 +280,7 @@
       --vp-c-brand-lighter: #ffc2ff;
       --vp-c-brand-dark: #8d50b5;
       --vp-c-brand-darker: #662c8e;
-      --vp-c-brand-next: #ef6061
+      --vp-c-brand-next: #ef6061;
   }
 
   38.75% {
@@ -289,7 +289,7 @@
       --vp-c-brand-lighter: #ffbfff;
       --vp-c-brand-dark: #964baf;
       --vp-c-brand-darker: #6f2688;
-      --vp-c-brand-next: #ed635a
+      --vp-c-brand-next: #ed635a;
   }
 
   40% {
@@ -298,7 +298,7 @@
       --vp-c-brand-lighter: #ffbcff;
       --vp-c-brand-dark: #9e47a9;
       --vp-c-brand-darker: #772082;
-      --vp-c-brand-next: #eb6552
+      --vp-c-brand-next: #eb6552;
   }
 
   41.25% {
@@ -307,7 +307,7 @@
       --vp-c-brand-lighter: #ffb9ff;
       --vp-c-brand-dark: #a643a2;
       --vp-c-brand-darker: #7e197c;
-      --vp-c-brand-next: #e8694b
+      --vp-c-brand-next: #e8694b;
   }
 
   42.5% {
@@ -316,7 +316,7 @@
       --vp-c-brand-lighter: #ffb6ff;
       --vp-c-brand-dark: #ac3f9b;
       --vp-c-brand-darker: #841075;
-      --vp-c-brand-next: #e46c44
+      --vp-c-brand-next: #e46c44;
   }
 
   43.75% {
@@ -325,7 +325,7 @@
       --vp-c-brand-lighter: #ffb3ff;
       --vp-c-brand-dark: #b23b94;
       --vp-c-brand-darker: #89046f;
-      --vp-c-brand-next: #e06f3d
+      --vp-c-brand-next: #e06f3d;
   }
 
   45% {
@@ -334,7 +334,7 @@
       --vp-c-brand-lighter: #ffb1ff;
       --vp-c-brand-dark: #b7378c;
       --vp-c-brand-darker: #8d0068;
-      --vp-c-brand-next: #db7336
+      --vp-c-brand-next: #db7336;
   }
 
   46.25% {
@@ -343,7 +343,7 @@
       --vp-c-brand-lighter: #ffaffb;
       --vp-c-brand-dark: #bb3485;
       --vp-c-brand-darker: #910060;
-      --vp-c-brand-next: #d77630
+      --vp-c-brand-next: #d77630;
   }
 
   47.5% {
@@ -352,7 +352,7 @@
       --vp-c-brand-lighter: #ffadf2;
       --vp-c-brand-dark: #be317d;
       --vp-c-brand-darker: #940059;
-      --vp-c-brand-next: #d17a2a
+      --vp-c-brand-next: #d17a2a;
   }
 
   48.75% {
@@ -361,7 +361,7 @@
       --vp-c-brand-lighter: #fface9;
       --vp-c-brand-dark: #c12f75;
       --vp-c-brand-darker: #970052;
-      --vp-c-brand-next: #cc7d24
+      --vp-c-brand-next: #cc7d24;
   }
 
   50% {
@@ -370,7 +370,7 @@
       --vp-c-brand-lighter: #ffabe0;
       --vp-c-brand-dark: #c32d6d;
       --vp-c-brand-darker: #98004b;
-      --vp-c-brand-next: #c6811e
+      --vp-c-brand-next: #c6811e;
   }
 
   51.25% {
@@ -379,7 +379,7 @@
       --vp-c-brand-lighter: #ffabd7;
       --vp-c-brand-dark: #c52d65;
       --vp-c-brand-darker: #9a0043;
-      --vp-c-brand-next: #bf8418
+      --vp-c-brand-next: #bf8418;
   }
 
   52.5% {
@@ -388,7 +388,7 @@
       --vp-c-brand-lighter: #ffabce;
       --vp-c-brand-dark: #c52e5e;
       --vp-c-brand-darker: #9a003c;
-      --vp-c-brand-next: #b98713
+      --vp-c-brand-next: #b98713;
   }
 
   53.75% {
@@ -397,7 +397,7 @@
       --vp-c-brand-lighter: #ffacc5;
       --vp-c-brand-dark: #c62f56;
       --vp-c-brand-darker: #9a0035;
-      --vp-c-brand-next: #b28a0f
+      --vp-c-brand-next: #b28a0f;
   }
 
   55% {
@@ -406,7 +406,7 @@
       --vp-c-brand-lighter: #ffadbc;
       --vp-c-brand-dark: #c5314e;
       --vp-c-brand-darker: #99002e;
-      --vp-c-brand-next: #ab8d0c
+      --vp-c-brand-next: #ab8d0c;
   }
 
   56.25% {
@@ -415,7 +415,7 @@
       --vp-c-brand-lighter: #ffaeb4;
       --vp-c-brand-dark: #c43447;
       --vp-c-brand-darker: #980027;
-      --vp-c-brand-next: #a3900b
+      --vp-c-brand-next: #a3900b;
   }
 
   57.5% {
@@ -424,7 +424,7 @@
       --vp-c-brand-lighter: #ffb0ab;
       --vp-c-brand-dark: #c3373f;
       --vp-c-brand-darker: #970020;
-      --vp-c-brand-next: #9c920d
+      --vp-c-brand-next: #9c920d;
   }
 
   58.75% {
@@ -433,7 +433,7 @@
       --vp-c-brand-lighter: #ffb2a3;
       --vp-c-brand-dark: #c13b38;
       --vp-c-brand-darker: #940619;
-      --vp-c-brand-next: #949510
+      --vp-c-brand-next: #949510;
   }
 
   60% {
@@ -442,7 +442,7 @@
       --vp-c-brand-lighter: #ffb59b;
       --vp-c-brand-dark: #be3e31;
       --vp-c-brand-darker: #921111;
-      --vp-c-brand-next: #8b9715
+      --vp-c-brand-next: #8b9715;
   }
 
   61.25% {
@@ -451,7 +451,7 @@
       --vp-c-brand-lighter: #ffb794;
       --vp-c-brand-dark: #bb4229;
       --vp-c-brand-darker: #8f1908;
-      --vp-c-brand-next: #83991b
+      --vp-c-brand-next: #83991b;
   }
 
   62.5% {
@@ -460,7 +460,7 @@
       --vp-c-brand-lighter: #ffba8c;
       --vp-c-brand-dark: #b74622;
       --vp-c-brand-darker: #8c1f00;
-      --vp-c-brand-next: #7a9b21
+      --vp-c-brand-next: #7a9b21;
   }
 
   63.75% {
@@ -469,7 +469,7 @@
       --vp-c-brand-lighter: #ffbd86;
       --vp-c-brand-dark: #b44a1a;
       --vp-c-brand-darker: #882500;
-      --vp-c-brand-next: #719d27
+      --vp-c-brand-next: #719d27;
   }
 
   65% {
@@ -478,7 +478,7 @@
       --vp-c-brand-lighter: #ffc17f;
       --vp-c-brand-dark: #af4e11;
       --vp-c-brand-darker: #842a00;
-      --vp-c-brand-next: #679e2e
+      --vp-c-brand-next: #679e2e;
   }
 
   66.25% {
@@ -487,7 +487,7 @@
       --vp-c-brand-lighter: #ffc47a;
       --vp-c-brand-dark: #ab5206;
       --vp-c-brand-darker: #802f00;
-      --vp-c-brand-next: #5da035
+      --vp-c-brand-next: #5da035;
   }
 
   67.5% {
@@ -496,7 +496,7 @@
       --vp-c-brand-lighter: #ffc774;
       --vp-c-brand-dark: #a55600;
       --vp-c-brand-darker: #7b3300;
-      --vp-c-brand-next: #51a13c
+      --vp-c-brand-next: #51a13c;
   }
 
   68.75% {
@@ -505,7 +505,7 @@
       --vp-c-brand-lighter: #ffca70;
       --vp-c-brand-dark: #a05900;
       --vp-c-brand-darker: #773700;
-      --vp-c-brand-next: #44a244
+      --vp-c-brand-next: #44a244;
   }
 
   70% {
@@ -514,7 +514,7 @@
       --vp-c-brand-lighter: #ffce6c;
       --vp-c-brand-dark: #9b5d00;
       --vp-c-brand-darker: #713b00;
-      --vp-c-brand-next: #34a44b
+      --vp-c-brand-next: #34a44b;
   }
 
   71.25% {
@@ -523,7 +523,7 @@
       --vp-c-brand-lighter: #ffd168;
       --vp-c-brand-dark: #956000;
       --vp-c-brand-darker: #6c3e00;
-      --vp-c-brand-next: #1ba553
+      --vp-c-brand-next: #1ba553;
   }
 
   72.5% {
@@ -532,7 +532,7 @@
       --vp-c-brand-lighter: #ffd466;
       --vp-c-brand-dark: #8e6300;
       --vp-c-brand-darker: #674100;
-      --vp-c-brand-next: #00a65b
+      --vp-c-brand-next: #00a65b;
   }
 
   73.75% {
@@ -541,7 +541,7 @@
       --vp-c-brand-lighter: #ffd764;
       --vp-c-brand-dark: #886600;
       --vp-c-brand-darker: #614400;
-      --vp-c-brand-next: #00a663
+      --vp-c-brand-next: #00a663;
   }
 
   75% {
@@ -550,7 +550,7 @@
       --vp-c-brand-lighter: #ffda63;
       --vp-c-brand-dark: #816900;
       --vp-c-brand-darker: #5b4700;
-      --vp-c-brand-next: #00a76c
+      --vp-c-brand-next: #00a76c;
   }
 
   76.25% {
@@ -559,7 +559,7 @@
       --vp-c-brand-lighter: #f8dd63;
       --vp-c-brand-dark: #7a6b00;
       --vp-c-brand-darker: #554900;
-      --vp-c-brand-next: #00a874
+      --vp-c-brand-next: #00a874;
   }
 
   77.5% {
@@ -568,7 +568,7 @@
       --vp-c-brand-lighter: #f0e064;
       --vp-c-brand-dark: #736e00;
       --vp-c-brand-darker: #4e4b00;
-      --vp-c-brand-next: #00a87d
+      --vp-c-brand-next: #00a87d;
   }
 
   78.75% {
@@ -577,7 +577,7 @@
       --vp-c-brand-lighter: #e7e366;
       --vp-c-brand-dark: #6c7000;
       --vp-c-brand-darker: #474d00;
-      --vp-c-brand-next: #00a985
+      --vp-c-brand-next: #00a985;
   }
 
   80% {
@@ -586,7 +586,7 @@
       --vp-c-brand-lighter: #dee668;
       --vp-c-brand-dark: #647200;
       --vp-c-brand-darker: #404f00;
-      --vp-c-brand-next: #00a98e
+      --vp-c-brand-next: #00a98e;
   }
 
   81.25% {
@@ -595,7 +595,7 @@
       --vp-c-brand-lighter: #d4e86c;
       --vp-c-brand-dark: #5c7400;
       --vp-c-brand-darker: #385100;
-      --vp-c-brand-next: #00a996
+      --vp-c-brand-next: #00a996;
   }
 
   82.5% {
@@ -604,7 +604,7 @@
       --vp-c-brand-lighter: #cbea70;
       --vp-c-brand-dark: #537600;
       --vp-c-brand-darker: #2f5200;
-      --vp-c-brand-next: #00a99f
+      --vp-c-brand-next: #00a99f;
   }
 
   83.75% {
@@ -613,7 +613,7 @@
       --vp-c-brand-lighter: #c1ec75;
       --vp-c-brand-dark: #4a7700;
       --vp-c-brand-darker: #255300;
-      --vp-c-brand-next: #00a9a7
+      --vp-c-brand-next: #00a9a7;
   }
 
   85% {
@@ -622,7 +622,7 @@
       --vp-c-brand-lighter: #b7ee7a;
       --vp-c-brand-dark: #407900;
       --vp-c-brand-darker: #185500;
-      --vp-c-brand-next: #00a9b0
+      --vp-c-brand-next: #00a9b0;
   }
 
   86.25% {
@@ -631,7 +631,7 @@
       --vp-c-brand-lighter: #acf080;
       --vp-c-brand-dark: #357a0a;
       --vp-c-brand-darker: #015600;
-      --vp-c-brand-next: #00a9b8
+      --vp-c-brand-next: #00a9b8;
   }
 
   87.5% {
@@ -640,7 +640,7 @@
       --vp-c-brand-lighter: #a1f287;
       --vp-c-brand-dark: #277b16;
       --vp-c-brand-darker: #005700;
-      --vp-c-brand-next: #00a9c0
+      --vp-c-brand-next: #00a9c0;
   }
 
   88.75% {
@@ -649,7 +649,7 @@
       --vp-c-brand-lighter: #96f48e;
       --vp-c-brand-dark: #117c1f;
       --vp-c-brand-darker: #005700;
-      --vp-c-brand-next: #00a8c7
+      --vp-c-brand-next: #00a8c7;
   }
 
   90% {
@@ -658,7 +658,7 @@
       --vp-c-brand-lighter: #89f595;
       --vp-c-brand-dark: #007d28;
       --vp-c-brand-darker: #005801;
-      --vp-c-brand-next: #00a8cf
+      --vp-c-brand-next: #00a8cf;
   }
 
   91.25% {
@@ -667,7 +667,7 @@
       --vp-c-brand-lighter: #7cf69d;
       --vp-c-brand-dark: #007e30;
       --vp-c-brand-darker: #00590d;
-      --vp-c-brand-next: #00a7d5
+      --vp-c-brand-next: #00a7d5;
   }
 
   92.5% {
@@ -676,7 +676,7 @@
       --vp-c-brand-lighter: #75f7a6;
       --vp-c-brand-dark: #007f38;
       --vp-c-brand-darker: #005917;
-      --vp-c-brand-next: #00a6dc
+      --vp-c-brand-next: #00a6dc;
   }
 
   93.75% {
@@ -685,7 +685,7 @@
       --vp-c-brand-lighter: #75f8ae;
       --vp-c-brand-dark: #008040;
       --vp-c-brand-darker: #005a20;
-      --vp-c-brand-next: #00a6e2
+      --vp-c-brand-next: #00a6e2;
   }
 
   95% {
@@ -694,7 +694,7 @@
       --vp-c-brand-lighter: #76f9b7;
       --vp-c-brand-dark: #008049;
       --vp-c-brand-darker: #005b28;
-      --vp-c-brand-next: #00a4e7
+      --vp-c-brand-next: #00a4e7;
   }
 
   96.25% {
@@ -703,7 +703,7 @@
       --vp-c-brand-lighter: #76f9c0;
       --vp-c-brand-dark: #008151;
       --vp-c-brand-darker: #005c30;
-      --vp-c-brand-next: #00a3ec
+      --vp-c-brand-next: #00a3ec;
   }
 
   97.5% {
@@ -712,7 +712,7 @@
       --vp-c-brand-lighter: #77fac9;
       --vp-c-brand-dark: #008159;
       --vp-c-brand-darker: #005c37;
-      --vp-c-brand-next: #00a2f1
+      --vp-c-brand-next: #00a2f1;
   }
 
   98.75% {
@@ -721,7 +721,7 @@
       --vp-c-brand-lighter: #77fad3;
       --vp-c-brand-dark: #008261;
       --vp-c-brand-darker: #005d3f;
-      --vp-c-brand-next: #00a0f4
+      --vp-c-brand-next: #00a0f4;
   }
 
   to {
@@ -730,7 +730,7 @@
       --vp-c-brand-lighter: #78fadc;
       --vp-c-brand-dark: #008269;
       --vp-c-brand-darker: #005d47;
-      --vp-c-brand-next: #009ff7
+      --vp-c-brand-next: #009ff7;
   }
 }
 
