Fix: head floating

--- a/src/.vuepress/components/HomePage/hero-info.scss
+++ b/src/.vuepress/components/HomePage/hero-info.scss
@@ -133,7 +133,8 @@
 
     padding: 0.5rem;
     border-radius: 50%;
-    // animation: floatImg 4s ease-in-out infinite;
+
+    animation: floatImg 4s ease-in-out infinite;
     // box-shadow: 0 0 20px #b7b2a9;
     // background: rgb(0, 0, 0, 0.7);
 
